--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@stencil/sass": "latest",
     "@stencil/utils": "latest",
     "@types/jest": "^22.2.3",
-    "jest": "^22.4.4"
+    "jest": "^22.4.4",
+    "tslint": "^5.10.0"
   },
   "repository": {
     "type": "git",
