--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ht-components",
   "version": "0.0.1",
-  "description": "Web components for Hattrick",
+  "description": "Web components for Hattrick.org.",
   "module": "dist/esm/index.js",
   "main": "dist/index.js",
   "types": "dist/types/components.d.ts",
@@ -29,14 +29,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/hattrickltd/ht-components.git"
+    "url": "git+https://gitlab.com/bodinaren/ht-components.git"
   },
-  "author": "Ionic Team",
+  "author": "Marcus Bodin <bodinaren@gmail.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/hattrickltd/ht-components"
+    "url": "https://gitlab.com/bodinaren/ht-components/issues"
   },
-  "homepage": "https://github.com/hattrickltd/ht-components",
+  "homepage": "https://gitlab.com/bodinaren/ht-components",
   "jest": {
     "transform": {
       "^.+\\.(ts|tsx)$": "<rootDir>/node_modules/@stencil/core/testing/jest.preprocessor.js"
