--- a/package.json
+++ b/package.json
@@ -11,18 +11,15 @@
   ],
   "scripts": {
     "build": "stencil build",
-    "dev": "sd concurrent \"stencil build --dev --watch\" \"stencil-dev-server\" ",
-    "serve": "stencil-dev-server",
+    "dev": "stencil build --dev --watch --serve",
     "start": "npm run dev",
     "test": "jest",
     "test.watch": "jest --watch"
   },
   "dependencies": {},
   "devDependencies": {
-    "@stencil/core": "^0.9.10",
-    "@stencil/dev-server": "latest",
+    "@stencil/core": "^0.10.0-7",
     "@stencil/sass": "latest",
-    "@stencil/utils": "latest",
     "@types/jest": "^22.2.3",
     "jest": "^22.4.4",
     "tslint": "^5.10.0"
