--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@stencil/core": "0.10.0-7",
+    "@stencil/core": "^0.10.0-9",
     "@stencil/sass": "latest",
     "@types/jest": "^22.2.3",
     "jest": "^22.4.4",
