--- a/package.json
+++ b/package.json
@@ -18,11 +18,11 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@stencil/core": "0.10.0-11",
-    "@stencil/sass": "0.0.5",
+    "@stencil/core": "0.11.0",
+    "@stencil/sass": "0.1.0",
     "@types/jest": "^22.2.3",
     "jest": "^22.4.4",
-    "tslint": "^5.10.0"
+    "tslint": "^5.11.0"
   },
   "repository": {
     "type": "git",
