--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hattrickltd/hattrick-components",
-  "version": "0.0.12",
+  "version": "0.0.14",
   "description": "Web components for Hattrick.org.",
   "module": "dist/esm/index.js",
   "main": "dist/index.js",
@@ -18,7 +18,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@stencil/core": "^0.13.0-4",
+    "@stencil/core": "0.13.0-11",
     "@stencil/sass": "0.1.0",
     "@types/jest": "^23.3.1",
     "jest": "^23.5.0",
