--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hattrickltd/hattrick-components",
-  "version": "0.0.19",
+  "version": "0.0.20",
   "description": "Web components for Hattrick.org.",
   "module": "dist/esm/index.js",
   "main": "dist/index.js",
@@ -19,12 +19,12 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@stencil/core": "0.13.0-11",
-    "@stencil/sass": "0.1.0",
-    "@types/jest": "^23.3.1",
-    "jest": "^23.5.0",
+    "@stencil/core": "^0.17.0",
+    "@stencil/sass": "^0.1.1",
+    "@types/jest": "^23.3.13",
+    "jest": "^23.6.0",
     "puppeteer": "1.7.0",
-    "tslint": "^5.11.0",
+    "tslint": "^5.12.1",
     "workbox-build": "3.4.1"
   },
   "repository": {
