--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@stencil/core": "^1.0.0-alpha.12"
+    "@stencil/core": "1.0.0-alpha.12"
   },
   "repository": {
     "type": "git",
