--- a/package.json
+++ b/package.json
@@ -22,8 +22,9 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@stencil/core": "1.0.0-beta.8",
-    "tslint": "^5.17.0"
+    "@stencil/core": "^1.2.2",
+    "tslint": "^5.17.0",
+    "workbox-build": "4.3.1"
   },
   "repository": {
     "type": "git",
