--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "test.e2e": "stencil test --e2e"
   },
   "dependencies": {
-    "@popperjs/core": "^2.9.2"
+    "@popperjs/core": "^2.11.2"
   },
   "devDependencies": {
-    "@stencil/core": "^1.17.4",
+    "@stencil/core": "^2.13.0",
+    "@stencil/eslint-plugin": "^0.4.0",
+    "eslint": "^8.8.0",
     "tslint": "^5.17.0",
     "workbox-build": "4.3.1"
   },
