--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test.e2e": "stencil test --e2e"
   },
   "dependencies": {
-    "@popperjs/core": "^2.11.2"
+    "@floating-ui/dom": "^1.6.1"
   },
   "devDependencies": {
     "@stencil/core": "^2.17.3",
