--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "@floating-ui/dom": "^1.6.1"
   },
   "devDependencies": {
-    "@stencil/core": "^2.17.3",
+    "@stencil/core": "^4.12.4",
     "@stencil/eslint-plugin": "^0.4.0",
+    "@types/jest": "^29.5.12",
     "eslint": "^7.32.0",
+    "jest": "^29.7.0",
+    "jest-cli": "^29.7.0",
     "tslint": "^5.17.0",
     "workbox-build": "4.3.1"
   },
