--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint": "^7.32.0",
     "jest": "^29.7.0",
     "jest-cli": "^29.7.0",
+    "prettier": "^3.2.5",
     "tslint": "^5.17.0",
     "workbox-build": "4.3.1"
   },
