--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,8 @@
 {
+  "printWidth": 100,
   "trailingComma": "all",
   "tabWidth": 2,
   "semi": true,
-  "singleQuote": false
+  "singleQuote": false,
+  "quoteProps": "consistent"
 }
